<resources>
    <string name="app_name">CoinCase</string>
    <string name="cannot_be_empty">Bu alan boş bırakılamaz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_usdt">Price(USDT)</string>
    <string name="quantity_arb">Quantity(ARB)</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="open_order_1">Open Order(1)</string>
    <string name="order_history">Order History</string>
    <string name="funds">Funds</string>
    <string name="cancel_all">Cancel All</string>
    <string name="btc_usdt">BTC/USDT</string>
    <string name="_08_09_11_29_05">08/09 - 11:29:05</string>
    <string name="limit_sell">Limit/Sell</string>
    <string name="_43">43%</string>
    <string name="_18_00_18_00">18.00 / 18.00</string>
    <string name="_60_00">60.00</string>
    <string name="_10_850_45">10,850.45</string>
    <string name="spot">Spot</string>
    <string name="margin">Margin</string>
    <string name="convert">Convert</string>
    <string name="_2_44">+2,44%</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="_42_719_1">42,719,1</string>
    <string name="_1_21_usd">=1.21 USD</string>
    <string name="btc">BTC</string>
    <string name="_0">0%</string>
    <string name="_25">25%</string>
    <string name="_50">50%</string>
    <string name="_75">75%</string>
    <string name="_100">100%</string>
    <string name="usdt">USDT</string>
    <string name="max_buy">Max. Buy</string>
    <string name="_0_00_btc">0.00 BTC</string>
    <string name="_24h_amount_btc">24h Amount(BTC)</string>
    <string name="_24h_low">24h Low</string>
    <string name="_24h_volume_usdt">24h Volume(USDT)</string>
    <string name="_112_76m">112.76M</string>
    <string name="quantity_btc">Quantity (BTC)</string>
    <string name="_24h_high">24h High</string>
    <string name="buy2">BUY</string>

</resources>